Quick code donor boots in for spawn donors